# china-population

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  data.csv  pyproject.toml
chinapopulation/: main.py  utils.py
