[tool.poetry]
name = "chinapopulation"
version = "0.1.0"
description = ""
authors = ["vicalloy <zbirder@gmail.com>"]
readme = "README.md"

[[tool.poetry.source]]
name = "bfsu"
url = "https://mirrors.bfsu.edu.cn/pypi/web/simple/"
default = true
secondary = true

[tool.poetry.dependencies]
python = "^3.10"
plotly = "^5.24.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
